Added some classes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ apply plugin: 'kotlin-kapt'
 
 project.ext {
     daggerVersion = "2.13"
+    lifecycle_version = "1.1.1"
 
 //    supportLibraryVersion = "27.1.1"
 //    androidArchVersion = "1.1.1"
@@ -56,6 +57,14 @@ dependencies {
     // Dagger Android
     implementation "com.google.dagger:dagger-android-support:$project.daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$project.daggerVersion"
+    // Arch components
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
+    // optional - ReactiveStreams support for LiveData
+    implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
+    // optional - Test helpers for LiveData
+    testImplementation "android.arch.core:core-testing:$lifecycle_version"
 
 
     // Test dependencies
@@ -64,4 +73,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
