--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ apply plugin: 'kotlin-kapt'
 project.ext {
     daggerVersion = "2.13"
     lifecycle_version = "1.1.1"
+    retrofitVersion = "2.4.0"
+    okHttpVersion = "3.4.1"
 
 //    supportLibraryVersion = "27.1.1"
 //    androidArchVersion = "1.1.1"
@@ -19,7 +21,7 @@ project.ext {
 //    timberVersion = "4.5.1"
 //    priorityJobQueueVersion = "2.0.1"
 //    playServicesVersion = "15.0.1"
-//    retrofitVersion = "2.1.0"
+//    retrofitVersion = "2.4.0"
 //    okHttpVersion = "3.4.1"
 //    rxRelayVersion = "2.0.0"
 //    rxLintVersion = "1.6"
@@ -43,6 +45,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
+
 }
 
 dependencies {
@@ -70,6 +81,17 @@ dependencies {
     implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
     // optional - Test helpers for LiveData
     testImplementation "android.arch.core:core-testing:$lifecycle_version"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$project.retrofitVersion"
+    // GSON Converter
+    implementation "com.squareup.retrofit2:converter-gson:$project.retrofitVersion"
+    // Retrofit RxJava2 adapter
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    // OkHttp Logging Interceptor
+    implementation "com.squareup.okhttp3:okhttp:$project.okHttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$project.okHttpVersion"
+
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
