--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,9 @@
         </activity>
 
 
-        <activity android:name=".features.MainActivity"/>
+        <!--<activity android:name=".features.MainActivity"/>-->
 
-        <activity android:name=".features.movies.MoviesActivity"/>
+        <activity android:name=".features.movies.ui.MoviesActivity"/>
 
 
     </application>
