--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <!--<activity android:name=".features.MainActivity"/>-->
 
-        <activity android:name=".features.movies.ui.MoviesActivity"/>
+        <activity android:name=".features.movies.view.MoviesActivity"/>
 
 
     </application>
