--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,11 @@ dependencies {
     implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
     // optional - Test helpers for LiveData
     testImplementation "android.arch.core:core-testing:$lifecycle_version"
+    // Room Database
+    implementation "android.arch.persistence.room:runtime:$lifecycle_version"
+    implementation "android.arch.persistence.room:rxjava2:$lifecycle_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$lifecycle_version"
+
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$project.retrofitVersion"
