--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ project.ext {
     lifecycle_version = "1.1.1"
     retrofitVersion = "2.4.0"
     okHttpVersion = "3.4.1"
+    timberVersion = "4.5.1"
 
 //    supportLibraryVersion = "27.1.1"
 //    androidArchVersion = "1.1.1"
@@ -102,8 +103,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
-    // Test dependencies
+    // Timber logger
+    implementation "com.jakewharton.timber:timber:$project.timberVersion"
 
+
+    // Test dependencies
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
