--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
 
         <activity android:name=".features.movies.view.MoviesActivity"/>
 
+        <activity android:name=".features.tasks.view.TasksActivity"/>
+
 
     </application>
 
