--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ project.ext {
     retrofitVersion = "2.4.0"
     okHttpVersion = "3.4.1"
     timberVersion = "4.5.1"
+    ktxVersion = "1.0.0"
 
 //    supportLibraryVersion = "27.1.1"
 //    androidArchVersion = "1.1.1"
@@ -38,7 +39,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -60,13 +61,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.1'
+    // Kotlin KTX
+    implementation "androidx.core:core-ktx:$ktxVersion"
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-compat:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
     // Application dependencies
     // Dagger core
@@ -76,16 +79,16 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$project.daggerVersion"
     // Arch components
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
     // optional - ReactiveStreams support for LiveData
-    implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.0.0'
     // optional - Test helpers for LiveData
-    testImplementation "android.arch.core:core-testing:$lifecycle_version"
+    testImplementation 'androidx.arch.core:core-testing:2.0.0'
     // Room DbRoom
-    implementation "android.arch.persistence.room:runtime:$lifecycle_version"
-    implementation "android.arch.persistence.room:rxjava2:$lifecycle_version"
-    kapt "android.arch.persistence.room:compiler:$lifecycle_version"
+    implementation 'androidx.room:room-runtime:2.1.0-alpha01'
+    implementation 'androidx.room:room-rxjava2:2.1.0-alpha01'
+    kapt 'androidx.room:room-compiler:2.1.0-alpha01'
 
 
     // Retrofit
@@ -109,8 +112,8 @@ dependencies {
 
     // Test dependencies
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
 }
 
 kotlin {
