--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,11 @@ project.ext {
     retrofitVersion = "2.4.0"
     okHttpVersion = "3.4.1"
     timberVersion = "4.5.1"
+
+    kotlinCoroutinesVersion = "0.30.1"
     ktxVersion = "1.0.0"
+
+    glideVersion = "4.8.0"
 
 //    supportLibraryVersion = "27.1.1"
 //    androidArchVersion = "1.1.1"
@@ -61,8 +65,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutinesVersion"
     // Kotlin KTX
     implementation "androidx.core:core-ktx:$ktxVersion"
 
@@ -73,11 +77,12 @@ dependencies {
 
     // Application dependencies
     // Dagger core
-    implementation "com.google.dagger:dagger:$project.daggerVersion"
+    implementation "com.google.dagger:dagger:$daggerVersion"
     // Dagger Android
-    implementation "com.google.dagger:dagger-android-support:$project.daggerVersion"
-    kapt "com.google.dagger:dagger-compiler:$project.daggerVersion"
-    // Arch components
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    // Architecture components
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
@@ -85,6 +90,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.0.0'
     // optional - Test helpers for LiveData
     testImplementation 'androidx.arch.core:core-testing:2.0.0'
+
     // Room DbRoom
     implementation 'androidx.room:room-runtime:2.1.0-alpha01'
     implementation 'androidx.room:room-rxjava2:2.1.0-alpha01'
@@ -92,22 +98,21 @@ dependencies {
 
 
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$project.retrofitVersion"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     // GSON Converter
-    implementation "com.squareup.retrofit2:converter-gson:$project.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     // Retrofit RxJava2 adapter
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     // OkHttp Logging Interceptor
-    implementation "com.squareup.okhttp3:okhttp:$project.okHttpVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$project.okHttpVersion"
-
+    implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Timber logger
-    implementation "com.jakewharton.timber:timber:$project.timberVersion"
+    implementation "com.jakewharton.timber:timber:$timberVersion"
 
 
     // Test dependencies
