--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".features.movies.view.MoviesActivity"/>
 
         <activity android:name=".features.tasks.view.TasksActivity"/>
+        <activity android:name=".features.tasks.view.TaskDetailsActivity" />
 
 
     </application>
